--- a/index.html
+++ b/index.html
@@ -3,18 +3,35 @@
 <head>
   <meta charset="UTF-8" />
   <title>IP Resolver</title>
+  <!-- Make it responsive on mobile -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <style>
+    :root {
+      --bg: #f5f5f5;
+      --card-bg: #ffffff;
+      --border: #cccccc;
+      --text-main: #222222;
+      --text-muted: #666666;
+      --error: #b00020;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       font-family: Arial, sans-serif;
-      background-color: #f5f5f5;
+      background-color: var(--bg);
       margin: 0;
       padding: 0;
+      color: var(--text-main);
     }
 
     .container {
       max-width: 480px;
       margin: 40px auto;
-      background: #ffffff;
+      background: var(--card-bg);
       padding: 24px 28px;
       border-radius: 12px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.08);
@@ -40,11 +57,11 @@
     input[type="text"],
     select {
       width: 100%;
-      box-sizing: border-box;
-      padding: 8px;
+      padding: 8px 10px;
       font-size: 14px;
       border-radius: 6px;
-      border: 1px solid #ccc;
+      border: 1px solid var(--border);
+      font-family: inherit;
     }
 
     input[readonly] {
@@ -63,14 +80,47 @@
 
     .note {
       font-size: 12px;
-      color: #666;
+      color: var(--text-muted);
       margin-top: 8px;
+      line-height: 1.4;
     }
 
     .error {
-      color: #b00020;
+      color: var(--error);
       font-size: 12px;
       margin-top: 4px;
+    }
+
+    /* -------- Responsive tweaks -------- */
+    @media (max-width: 600px) {
+      .container {
+        margin: 16px;
+        padding: 16px 14px;
+      }
+
+      h1 {
+        font-size: 18px;
+      }
+
+      .row {
+        flex-direction: column;
+      }
+
+      input[type="text"],
+      select {
+        font-size: 15px;
+        padding: 10px;
+      }
+    }
+
+    @media (max-width: 360px) {
+      body {
+        font-size: 14px;
+      }
+
+      h1 {
+        font-size: 17px;
+      }
     }
   </style>
 </head>
@@ -156,7 +206,7 @@
     </div>
 
     <div class="note">
-      אחרי הזנת ה<strong>היכר</strong> ימולאו אוטומטית כתובות ה-IP של
+      אחרי הזנת <strong>היכר</strong> ימולאו אוטומטית כתובות ה-IP של
       <strong>קיוסק</strong> ו<strong>פלזמה</strong>.<br />
       אחרי בחירת מספר <strong>עמדת מאור</strong> / <strong>מדפסת</strong>
       ימולאו כתובות ה-IP שלהם.
